--- a/styles/style.css
+++ b/styles/style.css
@@ -77,3 +77,44 @@ body {
   border: 2px solid #3a7a9a;
   border-radius: 50%;
 }
+
+/* Sección de Mis Capacidades */
+
+.skills-grid img {
+  width: 40px;
+}
+
+.skills-grid ul {
+list-style-type: circle;
+}
+
+.skills-grid {
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(200px,1fr));
+  gap: 20px;
+}
+
+.skills-card {
+  background-color: #1a3a5a;
+  border-left: 4px solid #00ffff;
+  border-radius: 0 4px 4px 0;
+}
+
+.skills-card h2{
+  text-align: center;
+}
+
+.skills-card li{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+li::before {
+  content: '»';
+  color: #00ffff;
+  font-weight: bold;
+}
