--- a/styles/style.css
+++ b/styles/style.css
@@ -148,9 +148,78 @@ li::before {
   padding: 10px;
 }
 
-.project-links a{
+.project-links a {
   margin-right: 10px;
   color: #ff8c00;
   font-weight: bold;
   text-decoration: none;
+}
+
+/* Sección de Mi Constactos */
+
+input, textarea {
+  background-color: #0a1a2a;
+  border: 1px solid #3a7a9a;
+  border-radius: 4px;
+  color: #c0c0c0;
+}
+
+.contact {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+.form {
+  display: grid;
+  gap: 10px;
+  padding: 10px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #00ffff;
+}
+
+input {
+  width: 100%;
+  padding: 10px 0;
+}
+
+textarea {
+  width: 100%;
+  min-height: 120px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.form button {
+  background-color: #ff8c00;
+  color: #0a1a2a;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 40px;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.social-platforms {
+  padding: 10px;
+}
+
+.social-flex {
+  display: flex;
+  gap: 50px;
+}
+
+.img-social {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.social-flex img {
+  width: 40px;
 }
