--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ main {
   margin-bottom: 10px;
 }
 
-li::before {
+.skills-card li::before {
   content: '»';
   color: #00ffff;
   font-weight: bold;
@@ -233,18 +233,21 @@ textarea {
 }
 
 .social-flex {
-  display: flex;
-  gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  gap: 20px;
+  list-style-type: none;
 }
 
 .img-social {
   display: flex;
-  justify-content: center;
-  margin-bottom: 10px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .social-flex img {
   width: 40px;
+  margin-bottom: 10px;
 }
 
 /* Footer */
