--- a/styles/style.css
+++ b/styles/style.css
@@ -243,6 +243,7 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-decoration: none;
 }
 
 .social-flex img {
