--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,49 @@ p {
   margin-bottom: 15px;
 }
 
+a {
+    color: #ff8c00;
+}
+
+/* Header */
+
+.navbar {
+  margin-bottom: 20px;
+  background-color: rgba(26, 58, 90, 0.8);
+  border-bottom: 2px solid #3a7a9a;
+}
+
+.navbar-toggler, .navbar-toggler:focus {
+  border: 1px solid #ff8c00;
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 15px rgba(255, 140, 0,0.3), inset 0 0 10px rgba(255, 140, 0,0.2);
+}
+
+.navbar-toggler svg{
+width: 30px;
+}
+
+.navbar a {
+  color: #ff8c00;
+  font-size: 21px;
+  text-transform: uppercase;
+  padding: 10px;
+  margin: 0 5px;
+}
+
+.navbar a:hover, .navbar a:focus {
+  border: 1px solid #00ffff;
+  color: #00ffff;
+  text-shadow: 0 0 5px #00ffff;
+}
+
+.navbar-brand img {
+  width: 40px;
+}
+
+/* Body */
 body {
   background-color: #0a1a2a;
   line-height: 1.6;
@@ -172,7 +215,6 @@ main {
 
 .project-links a {
   margin-right: 10px;
-  color: #ff8c00;
   font-weight: bold;
   text-decoration: none;
 }
