add: Añadi imagen de Portafolio y termine el nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,10 @@ width: 30px;
   text-shadow: 0 0 5px #00ffff;
 }
 
+#navbarNav {
+  justify-content: end;
+}
+
 .navbar-brand img {
   width: 40px;
 }
