--- a/styles/style.css
+++ b/styles/style.css
@@ -150,13 +150,9 @@ main {
   width: 40px;
 }
 
-.skills-grid ul {
-  list-style-type: circle;
-}
-
 .skills-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
 
@@ -194,7 +190,7 @@ main {
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
 
@@ -235,7 +231,7 @@ textarea {
 
 .contact {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 10px;
 }
 
@@ -283,6 +279,7 @@ textarea {
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   gap: 20px;
   list-style-type: none;
+  padding: 0
 }
 
 .img-social {
