--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ p {
 }
 
 a {
-    color: #ff8c00;
+  color: #ff8c00;
 }
 
 /* Header */
@@ -49,16 +49,17 @@ a {
   border-bottom: 2px solid #3a7a9a;
 }
 
-.navbar-toggler, .navbar-toggler:focus {
+.navbar-toggler,
+.navbar-toggler:focus {
   border: 1px solid #ff8c00;
 }
 
 .navbar-toggler:focus {
-  box-shadow: 0 0 15px rgba(255, 140, 0,0.3), inset 0 0 10px rgba(255, 140, 0,0.2);
+  box-shadow: 0 0 15px rgba(255, 140, 0, 0.3), inset 0 0 10px rgba(255, 140, 0, 0.2);
 }
 
-.navbar-toggler svg{
-width: 30px;
+.navbar-toggler svg {
+  width: 30px;
 }
 
 .navbar a {
@@ -69,7 +70,8 @@ width: 30px;
   margin: 0 5px;
 }
 
-.navbar a:hover, .navbar a:focus {
+.navbar a:hover,
+.navbar a:focus {
   border: 1px solid #00ffff;
   color: #00ffff;
   text-shadow: 0 0 5px #00ffff;
@@ -134,6 +136,7 @@ main {
   align-items: center;
   width: 100%;
   justify-content: space-evenly;
+  gap: 20px;
   margin-bottom: 15px;
 }
 
@@ -198,6 +201,13 @@ main {
   background-color: #1a3a5a;
   border: 1px solid #3a7a9a;
   border-radius: 4px;
+  transition: all 0.2s ease;
+}
+
+.project-card:hover {
+  transition: all 0.2s ease;
+  box-shadow: 0 0 8px #00ffff;
+  transform: translateY(-10px);
 }
 
 .project-card img {
@@ -217,6 +227,11 @@ main {
   margin-right: 10px;
   font-weight: bold;
   text-decoration: none;
+}
+
+.project-links a:hover {
+  color: #00ffff;
+  text-shadow: 0 0 5px #00ffff;
 }
 
 /* Sección de Mi Constactos */
