--- a/styles/style.css
+++ b/styles/style.css
@@ -283,6 +283,12 @@ textarea {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.form button:hover {
+  transition: all 0.2s ease;
+  background-color: #00ffff;
 }
 
 .social-platforms {
@@ -302,6 +308,12 @@ textarea {
   flex-direction: column;
   align-items: center;
   text-decoration: none;
+  transition: all 0.2s ease;
+}
+
+.img-social:hover {
+  transition: all 0.2s ease;
+  transform: translateY(-4px);
 }
 
 .social-flex img {
